Updated Gradle wrapper and a few other things.